--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -7,7 +7,7 @@
             "type": "process",
             "args": [
                 "build",
-                "${workspaceFolder}/L01/L01.csproj"
+                "${workspaceFolder}/Test/Test.csproj"
             ],
             "problemMatcher": "$msCompile"
         }
