--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,6 +4,17 @@
    // For further information visit https://github.com/OmniSharp/omnisharp-vscode/blob/master/debugger-launchjson.md
    "version": "0.2.0",
    "configurations": [
+       {
+           "name": "Person (console)",
+           "type": "coreclr",
+           "request": "launch",
+           "preLaunchTask": "build",
+           "program": "${workspaceFolder}/L03/Person/bin/Debug/netcoreapp2.1/Person.dll",
+           "args": [],
+           "cwd": "${workspaceFolder}/L03/Person",
+           "stopAtEntry": false,
+           "console": "internalConsole"
+       },
         {
             "name": "Test (console)",
             "type": "coreclr",
